[tool.poetry]
name = "relearn"
version = "0.1.2"
description = "A package for reinforcement learning (RL) development, featuring classes for Markov Decision Processes (MDPs), agents, and environments. Ideal for creating custom RL environments and experimenting with algorithms. Suitable for researchers, educators, and developers seeking to explore or implement RL applications."
authors = ["eliroc98 <elisabetta.rocchetti0@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
exclude = ["examples/"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/umilISLab/relearn"